core/stdlib/tests/ui/store_invalid_result_field.rs
use stdlib::Store;

#[derive(Store)]
struct Test {
    res: anyhow::Result<u64>,
}

#[derive(Store)]
struct Test1 {
    res: Result<u64, Error>,
}
